networking/traefik/external-routes/artificer.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: artificer-ingress-route
  namespace: networking
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`artificer.unrelated.family`)
      kind: Rule
      services:
        - name: artificer-service
          port: 9000
  tls:
    secretName: unrelated-family-tls
---
apiVersion: v1
kind: Service
metadata:
  name: artificer-service
  namespace: networking
spec:
  type: ExternalName
  externalName: "10.2.50.161"
  ports:
    - name: https
      port: 9000
      protocol: TCP
      targetPort: 9000
