networking/traefik/external-routes/sonarr.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress-route
  namespace: networking
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.local.unrelated.family`)
      kind: Rule
      services:
        - name: sonarr-docker
          port: 443
  tls:
    secretName: local-unrelated-family-tls
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-docker
  namespace: networking
spec:
  type: ExternalName
  externalName: "traefik-port.local.unrelated.family"
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
